# E2EE

./: .gitignore  Cargo.toml  README.md
paper/: example.m  gen.m  main.tex  ratchet.m  recv.m  rho.bib  send.m  sender.m  temp.m
paper/rho-class/: rhobabel.sty
src/: main.rs
src/client/: .env  Cargo.toml
src/client/src/: account.rs  app.rs  file.rs  key.rs  lib.rs  message.rs  session.rs  socket.rs  support.rs  util.rs
src/server/: .env  Cargo.toml  database.sql
src/server/src/: lib.rs
