[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full", "rt-multi-thread"] }
hyper = { version = "1.5.0", features = ["full"] }
axum = { version = "0.7.7", features = ["macros"] }
serde = { version = "1.0.214", features = ["derive"] }
tracing-subscriber = "0.3.18"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
chrono = "0.4.38"
fern = "0.7.0"
log = "0.4.22"
